// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - de 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - en 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - es 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - es-mx 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - fr 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - id 1`] = `
{
  "cards": 2788,
  "series": 2,
  "sets": 51,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - it 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - ja 1`] = `
{
  "cards": 13006,
  "series": 15,
  "sets": 127,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - ko 1`] = `
{
  "cards": 239,
  "series": 3,
  "sets": 68,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - nl 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - pl 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - pt 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - pt-br 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - ru 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - th 1`] = `
{
  "cards": 2921,
  "series": 2,
  "sets": 53,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - zh-cn 1`] = `
{
  "cards": 877,
  "series": 3,
  "sets": 8,
}
`;

exports[`TcgDex > Validate full data set > Asian data can be queried and is valid - zh-tw 1`] = `
{
  "cards": 7436,
  "series": 2,
  "sets": 83,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - de 1`] = `
{
  "cards": 20233,
  "series": 16,
  "sets": 155,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - en 1`] = `
{
  "cards": 23770,
  "series": 21,
  "sets": 216,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - es 1`] = `
{
  "cards": 15495,
  "series": 17,
  "sets": 156,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - es-mx 1`] = `
{
  "cards": 1656,
  "series": 2,
  "sets": 11,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - fr 1`] = `
{
  "cards": 22155,
  "series": 20,
  "sets": 199,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - id 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - it 1`] = `
{
  "cards": 15726,
  "series": 19,
  "sets": 192,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - ja 1`] = `
{
  "cards": 0,
  "series": 2,
  "sets": 1,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - ko 1`] = `
{
  "cards": 1124,
  "series": 1,
  "sets": 11,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - nl 1`] = `
{
  "cards": 0,
  "series": 1,
  "sets": 3,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - pl 1`] = `
{
  "cards": 0,
  "series": 2,
  "sets": 2,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - pt 1`] = `
{
  "cards": 13889,
  "series": 11,
  "sets": 114,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - pt-br 1`] = `
{
  "cards": 1124,
  "series": 1,
  "sets": 11,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - ru 1`] = `
{
  "cards": 0,
  "series": 1,
  "sets": 9,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - th 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - zh-cn 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;

exports[`TcgDex > Validate full data set > International data can be queried and is valid - zh-tw 1`] = `
{
  "cards": 0,
  "series": 0,
  "sets": 0,
}
`;
